--- a/TributePage.html
+++ b/TributePage.html
@@ -12,5 +12,7 @@
         does at the hospital that has made him popular too. He features in the TV show “The Vet Life” alongside Dr. Aubrey Ross
         and Dr. Micheal Lavigne. The show chronicles their juggling act running the full-service hospital and animal shelter
         while managing family lives filled with spouses, parents, in-laws, children, pets, and friends.</p>
+        <p>Read more about Dr. Diarra Blue on <a id="tribute-link" target="_blank" href="https://thecelebsinfo.com/dr-diarra-blue-vet/">his page at
+        thecelebsinfo.com</a></p>
     </main>
 </html>
