--- a/TributePage.html
+++ b/TributePage.html
@@ -1,6 +1,19 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <!DOCTYPE html>
+<style>
+    #main {
+        text-align: center;
+    }
+
+    img {
+        max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+
 <html>
     <main id="main">
         <h1 id="title">Dr. Diarra Blue</h1>
